# framework

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  domain-design.md  多线程任务代码框架设计.md  设备状态与命令契约.md
src/: CMakeLists.txt
src/adapters/config/: json_program_parser.c
src/adapters/inbound/: cli_command_adapter.c  maintenance_command_adapter.c
src/adapters/logging/: file_event_logger.c
src/adapters/outbound/: file_program_repository.c
src/application/coordinators/: alarm_monitor.c  background_alarm_monitor.c  compatibility_trigger_runner.c  control_context.c  control_context_layout.h  control_context_private.h  control_outcome_recorder.c  control_tick.c  controller_runtime.c  controller_runtime_private.h  device_runtime.c  device_runtime_layout.h  device_runtime_private.h  main_loop.c  maintenance_coordinator.c  runtime_event_recorder.c  runtime_result_projection.c  scheduler_runtime_port.c  system_context.c  system_context_private.h  system_context_runtime_layout.h  wash_app.c  wash_app_private.h  wash_cycle_coordinator.c
src/application/jobs/: alarm_detect_job.c  alarm_detect_job.h  io_read_job.c  io_read_job.h
src/application/services/: alarm_evaluator.c  command_dispatch.c
src/application/use_cases/: acknowledge_fault.c  command_matrix_reason_codes.h  enter_maintenance_mode.c  formal_command.c  jog_actuator.c  process_formal_command.c  process_wash_trigger.c  query_wash_session_status.c  start_wash_cycle.c  stop_wash_cycle.c  update_program_config.c  wash_control.c
src/domain/model/: chemical_action.c  chemical_channel.c  conditional_control.c  exit_action.c  fault_event.c  position_trigger.c  program_snapshot.c  program_validation.c  runtime_state_text.c  safety_interlock.c  segment_exception_policy.c  segment_motion_plan.c  state_transition_record.c  vehicle_type.c  wait_condition.c  wash_cycle.c  wash_execution.c  wash_program.c  wash_segment.c  wash_session.c  wash_stage.c  wash_state_text.c  wash_trigger_event.c
src/domain/services/: brush_control_state_machine.c  chemical_dosing_state_machine.c  fault_policy_service.c  gantry_motion_state_machine.c  precheck_service.c  program_snapshot_service.c  recovery_state_machine.c  segment_control_service.c  trigger_priority_service.c  wait_timeout_service.c  wash_execution_service.c  wash_session_state_machine.c
src/main/: main.c  wash_cli_main.c
src/platform/drivers/: simulated_brush_driver.c  simulated_chemical_driver.c  simulated_driver_context.c  simulated_dryer_driver.c  simulated_gantry_driver.c  simulated_ro_water_driver.c  simulated_sensor_driver.c
src/platform/linux/: background_alarm_monitor_linux.c  command_ingress_stdio_linux.c  controller_scheduler_linux.c  controller_scheduler_linux_internal.h  main_loop.c  scheduler_linux.c  scheduler_linux_internal.h  stdio_formal_command_adapter.c  stdio_formal_command_adapter.h  (+1 more)
src/startup/: app_bootstrap.c  app_bootstrap.h  app_bootstrap_private.h  main.c  wash_app.c  wash_app_private.h
tests/: CMakeLists.txt  test_runtime_friend.c  test_support.h
tests/contract/: test_controller_runtime_lifecycle_contract.c  test_controller_runtime_startup_rollback_contract.c  test_controller_scheduler_contract.c  test_controller_status_contract.c  test_controller_stdin_protocol.c  test_cycle_finished_contract.c  test_event_source_dispatch_contract.c  test_execution_events_contract.c  test_fault_event_contract.c  test_formal_command_matrix_samples.c  test_main_loop_boundary_contract.c  test_maintenance_command_contract.c  test_position_exit_semantics_contract.c  test_program_config_adapter_contract.c  test_program_config_contract.c  test_program_snapshot_contract.c  test_scheduler_contract.c  test_scheduler_exit_contract.c  test_scheduler_observability_contract.c  test_segment_runtime_orchestration_contract.c  test_session_command_contract.c  test_session_finalization_contract.c  test_start_wash_cycle_contract.c  test_status_query_readonly_contract.c  test_status_single_line_contract.c  test_system_context_boundary_contract.c  test_system_context_lifecycle_contract.c  test_trigger_runtime_ownership_contract.c
tests/hil/: README.md  test_hil_smoke.sh
tests/integration/: test_background_alarm_monitor_runtime.c  test_compat_entrypoint_removal.c  test_controller_command_paths.c  test_controller_runtime_persistence.c  test_controller_runtime_single_instance.c  test_controller_runtime_startup_failures.c  test_device_state_machine.c  test_event_driven_session_progression.c  test_fault_handling_scenarios.c  test_formal_command_scheduler_dispatch.c  test_formal_entry_ownership.c  test_normal_wash_cycle.c  test_program_repository_load_path.c  test_program_snapshot_consistency.c  test_program_update_persistence.c  test_scheduler_command_fd_nonblocking.c  test_scheduler_failure_paths.c  test_segment_exception_paths.c  test_segment_runtime_orchestration.c  test_session_exception_paths.c  test_session_status_observability.c  test_single_vehicle_business_cycle.c  test_status_query_no_side_effect.c  test_system_context_error_paths.c  test_unique_session_result_sink.c
tests/simulation/: test_basic_control_loop.c  test_controller_continuous_runtime.c  test_controller_global_fault_behavior.c  test_event_driven_progression.c  test_fixed_period_scheduler_tick.c  test_power_loss_recovery.c  test_program_snapshot_runtime_behavior.c  test_scheduler_backlog_behavior.c  test_scheduler_event_priority.c  test_segment_exception_behavior.c  test_segment_runtime_control.c  test_trigger_priority_competition.c
tests/unit/: test_alarm_evaluator.c  test_execution_model_entities.c  test_fault_policy_service.c  test_main.c  test_precheck_rules.c  test_program_config_validation.c  test_program_snapshot_service.c  test_recovery_state_machine.c  test_runtime_object_ownership.c  test_service_arg_slices.c  test_system_context_lifecycle.c  test_system_context_pool.c  test_trigger_priority_service.c  test_wait_timeout_service.c  test_wash_cycle_state_machine.c  test_wash_execution_service.c  test_wash_session_state_machine.c  test_worker_thread.c
(+598 files in other folders)
