enable_testing()

function(add_wash_test name source)
    add_executable(${name} ${source})
    target_link_libraries(${name} PRIVATE wash_core)
    target_include_directories(${name} PRIVATE ${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/include ${PROJECT_SOURCE_DIR}/tests)
    add_test(NAME ${name} COMMAND ${name})
    set_tests_properties(${name} PROPERTIES WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
endfunction()

# Unit
add_wash_test(test_unit_execution_entities unit/test_execution_model_entities.c)
add_wash_test(test_unit_program_config_validation unit/test_program_config_validation.c)
add_wash_test(test_unit_service_arg_slices unit/test_service_arg_slices.c)
add_wash_test(test_unit_runtime_object_ownership unit/test_runtime_object_ownership.c)

# Contract
add_wash_test(test_contract_program_config_adapter contract/test_program_config_adapter_contract.c)
add_wash_test(test_contract_segment_runtime contract/test_segment_runtime_orchestration_contract.c)
add_wash_test(test_contract_position_exit contract/test_position_exit_semantics_contract.c)
add_wash_test(test_contract_system_context_boundary contract/test_system_context_boundary_contract.c)
add_wash_test(test_contract_trigger_runtime_ownership contract/test_trigger_runtime_ownership_contract.c)
add_wash_test(test_contract_session_finalization contract/test_session_finalization_contract.c)
add_wash_test(test_contract_status_query_readonly contract/test_status_query_readonly_contract.c)

# Integration
add_wash_test(test_integration_segment_runtime integration/test_segment_runtime_orchestration.c)
add_wash_test(test_integration_controller_runtime integration/test_controller_runtime_persistence.c)
add_wash_test(test_integration_segment_exception_paths integration/test_segment_exception_paths.c)
add_wash_test(test_integration_session_status_observability integration/test_session_status_observability.c)
add_wash_test(test_integration_formal_entry_ownership integration/test_formal_entry_ownership.c)
add_wash_test(test_integration_compat_entrypoint_removal integration/test_compat_entrypoint_removal.c)
target_compile_definitions(test_integration_compat_entrypoint_removal PRIVATE
    WASH_CORE_ARCHIVE_PATH="$<TARGET_FILE:wash_core>"
    WASH_CORE_NM="${CMAKE_NM}"
)
add_wash_test(test_integration_unique_session_result_sink integration/test_unique_session_result_sink.c)
add_wash_test(test_integration_status_query_no_side_effect integration/test_status_query_no_side_effect.c)

# Simulation
add_wash_test(test_sim_basic_control_loop simulation/test_basic_control_loop.c)
add_wash_test(test_sim_controller_global_fault_behavior simulation/test_controller_global_fault_behavior.c)
add_wash_test(test_sim_segment_runtime_control simulation/test_segment_runtime_control.c)
add_wash_test(test_sim_segment_exception_behavior simulation/test_segment_exception_behavior.c)
