enable_testing()

function(add_wash_test name source)
    add_executable(${name} ${source} test_runtime_friend.c)
    target_link_libraries(${name} PRIVATE wash_core)
    target_include_directories(${name} PRIVATE ${PROJECT_SOURCE_DIR} ${PROJECT_SOURCE_DIR}/include ${PROJECT_SOURCE_DIR}/tests)
    add_test(NAME ${name} COMMAND ${name})
    set_tests_properties(${name} PROPERTIES WORKING_DIRECTORY ${PROJECT_SOURCE_DIR})
endfunction()

# Unit
add_wash_test(test_unit_execution_entities unit/test_execution_model_entities.c)
add_wash_test(test_unit_program_config_validation unit/test_program_config_validation.c)
add_wash_test(test_unit_recovery_state_machine unit/test_recovery_state_machine.c)
add_wash_test(test_unit_service_arg_slices unit/test_service_arg_slices.c)
add_wash_test(test_unit_runtime_object_ownership unit/test_runtime_object_ownership.c)
add_wash_test(test_unit_system_context_lifecycle unit/test_system_context_lifecycle.c)
add_wash_test(test_unit_alarm_evaluator unit/test_alarm_evaluator.c)
add_wash_test(test_unit_worker_thread unit/test_worker_thread.c)

# Contract
add_wash_test(test_contract_program_config_adapter contract/test_program_config_adapter_contract.c)
add_wash_test(test_contract_program_config_contract contract/test_program_config_contract.c)
add_wash_test(test_contract_segment_runtime contract/test_segment_runtime_orchestration_contract.c)
add_wash_test(test_contract_position_exit contract/test_position_exit_semantics_contract.c)
add_wash_test(test_contract_system_context_boundary contract/test_system_context_boundary_contract.c)
add_wash_test(test_contract_system_context_lifecycle contract/test_system_context_lifecycle_contract.c)
add_wash_test(test_contract_trigger_runtime_ownership contract/test_trigger_runtime_ownership_contract.c)
add_wash_test(test_contract_session_finalization contract/test_session_finalization_contract.c)
add_wash_test(test_contract_status_query_readonly contract/test_status_query_readonly_contract.c)
add_wash_test(test_contract_controller_scheduler contract/test_controller_scheduler_contract.c)
add_wash_test(test_contract_controller_runtime_lifecycle contract/test_controller_runtime_lifecycle_contract.c)
add_wash_test(test_contract_controller_runtime_startup_rollback contract/test_controller_runtime_startup_rollback_contract.c)
add_wash_test(test_contract_main_loop_boundary contract/test_main_loop_boundary_contract.c)
add_wash_test(test_contract_event_source_dispatch contract/test_event_source_dispatch_contract.c)
add_wash_test(test_contract_scheduler_exit contract/test_scheduler_exit_contract.c)
add_wash_test(test_contract_scheduler_observability contract/test_scheduler_observability_contract.c)
add_wash_test(test_contract_status_single_line contract/test_status_single_line_contract.c)
add_wash_test(test_contract_formal_command_matrix_samples contract/test_formal_command_matrix_samples.c)

# Integration
add_wash_test(test_integration_segment_runtime integration/test_segment_runtime_orchestration.c)
add_wash_test(test_integration_controller_runtime integration/test_controller_runtime_persistence.c)
add_wash_test(test_integration_controller_runtime_startup_failures integration/test_controller_runtime_startup_failures.c)
add_wash_test(test_integration_controller_runtime_single_instance integration/test_controller_runtime_single_instance.c)
add_wash_test(test_integration_background_alarm_monitor_runtime integration/test_background_alarm_monitor_runtime.c)
add_wash_test(test_integration_segment_exception_paths integration/test_segment_exception_paths.c)
add_wash_test(test_integration_session_status_observability integration/test_session_status_observability.c)
add_wash_test(test_integration_formal_entry_ownership integration/test_formal_entry_ownership.c)
add_wash_test(test_integration_compat_entrypoint_removal integration/test_compat_entrypoint_removal.c)
target_compile_definitions(test_integration_compat_entrypoint_removal PRIVATE
    WASH_CORE_ARCHIVE_PATH="$<TARGET_FILE:wash_core>"
    WASH_CORE_NM="${CMAKE_NM}"
)
add_wash_test(test_integration_unique_session_result_sink integration/test_unique_session_result_sink.c)
add_wash_test(test_integration_status_query_no_side_effect integration/test_status_query_no_side_effect.c)
add_wash_test(test_integration_formal_command_scheduler_dispatch integration/test_formal_command_scheduler_dispatch.c)
add_wash_test(test_integration_scheduler_command_fd_nonblocking integration/test_scheduler_command_fd_nonblocking.c)
add_wash_test(test_integration_scheduler_failure_paths integration/test_scheduler_failure_paths.c)
add_wash_test(test_integration_device_state_machine integration/test_device_state_machine.c)
add_wash_test(test_integration_single_vehicle_business_cycle integration/test_single_vehicle_business_cycle.c)
add_wash_test(test_integration_system_context_error_paths integration/test_system_context_error_paths.c)
add_wash_test(test_integration_program_repository_load_path integration/test_program_repository_load_path.c)

# Simulation
add_wash_test(test_sim_basic_control_loop simulation/test_basic_control_loop.c)
add_wash_test(test_sim_controller_global_fault_behavior simulation/test_controller_global_fault_behavior.c)
add_wash_test(test_sim_segment_runtime_control simulation/test_segment_runtime_control.c)
add_wash_test(test_sim_segment_exception_behavior simulation/test_segment_exception_behavior.c)
add_wash_test(test_sim_fixed_period_scheduler_tick simulation/test_fixed_period_scheduler_tick.c)
add_wash_test(test_sim_scheduler_event_priority simulation/test_scheduler_event_priority.c)
add_wash_test(test_sim_scheduler_backlog_behavior simulation/test_scheduler_backlog_behavior.c)
